# indoor-tiktok

./: .gitignore  README.md  pyproject.toml  requirements.txt
embedding_service/: embedding_service.py
embedding_service/protos/: embedding.proto
frontend/: frontend.py
indexer/: indexer.py
protos/: embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py
vespa/: define_vespa.py  services.xml
vespa/indexer/: embedding_pb2_grpc.py  indexer.py
vespa/schemas/: images.sd
