[tool.poetry]
name = "indoor-tiktok"
version = "0.1.0"
description = ""
authors = ["mesteve <marescasinf@gmail.com>"]
readme = "README.md"
packages = [{include = "indoor_tiktok"}]

[tool.poetry.dependencies]
python = "^3.9"
pyvespa="^0.33.0"
tqdm = "^4.65.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

